--- a/StreetFighterGame/StreetFighterGame.csproj
+++ b/StreetFighterGame/StreetFighterGame.csproj
@@ -144,6 +144,7 @@
     <Compile Include="GameEngine\Character.cs" />
     <Compile Include="GameEngine\CharacterFactory.cs" />
     <Compile Include="GameEngine\Draw.cs" />
+    <Compile Include="GameEngine\Hitbox.cs" />
     <Compile Include="LICH_SU_TRAN_DAU.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
